Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
[ADL_P] Dual eDP support is missing, PPS state tracking gets confused, backlight does not work
I'm current using Archlinux with sway, and those problems always can reproduced even in tty with latest drm-tip kernel(top commit a4cddfce1a26a30164a0bf668c05b32a00d3ff9c).
Unable to change backlight via intel_backlight [Always]
- I have disabled the
nouveau
driver via the kernel parameters and didn't install thenvidia
driver.
options root=UUID=ca87bd37-bcbd-4a8b-b77b-2769c564fdc3 nowatchdog module_blacklist=nouveau nvidia-drm.modeset=1 drm.debug=0x1e log_buf_len=20M rw
backlight folder
$ ls /sys/class/backlight
intel_backlight nvidia_wmi_ec_backlight
lspci output
00:02.0 VGA compatible controller [0300]: Intel Corporation Alder Lake-P Integrated Graphics Controller [8086:46a6] (rev 0c)
Subsystem: Lenovo Device [17aa:382f]
Kernel driver in use: i915
--
01:00.0 VGA compatible controller [0300]: NVIDIA Corporation GA107BM [GeForce RTX 3050 Ti Mobile] [10de:25e0] (rev a1)
Subsystem: Lenovo Device [17aa:382f]
Kernel modules: nouveau
- I can not change the backlight via the
intel_backlight
but I can usenvidia_wmi_ec_backlight
to change backlight.
Unable to resume from suspended state [Always]
If I suspend the system and resume the laptop, the internal screen is black with backlight.
Unable to use high refresh rate [Always]
My laptop's internal screen refresh rate is 165Hz, But I can only use it as 60Hz
swaymsg -t get_outputs
Output eDP-1 'Unknown 0x0A2D 0x00000000' (focused)
Current mode: 2560x1440 @ 60.000 Hz
Position: 0,0
Scale factor: 1.250000
Scale filter: linear
Subpixel hinting: unknown
Transform: normal
Workspace: 3
Max render time: off
Adaptive sync: enabled
Available modes:
2560x1440 @ 60.000 Hz
Suspicious boot log
[ 4.598860] Call Trace:
[ 4.598866] <TASK>
[ 4.598871] ? intel_display_power_get+0x52/0x60 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.599173] intel_dp_aux_xfer+0xe9/0x800 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.599433] ? lapic_next_deadline+0x28/0x30
[ 4.599441] ? clockevents_program_event+0x92/0xf0
[ 4.599449] ? hrtimer_try_to_cancel+0x16/0x100
[ 4.599455] intel_dp_aux_transfer+0x1a9/0x2e0 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.599690] drm_dp_dpcd_access+0x6d/0x120 [drm_dp_helper 0c610a3bded59b299b482d8821111ccafe54cfda]
[ 4.599713] drm_dp_dpcd_write+0x85/0xd0 [drm_dp_helper 0c610a3bded59b299b482d8821111ccafe54cfda]
[ 4.599732] intel_dp_set_power+0x69/0x160 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.599969] intel_ddi_post_disable+0x383/0x450 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.600208] intel_encoders_post_disable+0x7b/0x90 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.600435] intel_old_crtc_state_disables+0x38/0xa0 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.600648] intel_atomic_commit_tail+0x396/0x18b0 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.600858] ? flush_workqueue+0x1a5/0x410
[ 4.600865] intel_atomic_commit+0x314/0x390 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.601068] drm_atomic_commit+0xa2/0xd0
[ 4.601076] ? drm_plane_get_damage_clips.cold+0x1c/0x1c
[ 4.601083] intel_modeset_init+0x198/0x280 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.601291] i915_driver_probe+0x586/0xd40 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.601464] ? drm_privacy_screen_get+0x15f/0x190
[ 4.601471] i915_pci_probe+0x52/0x150 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.601633] local_pci_probe+0x42/0x80
[ 4.601639] ? pci_match_device+0xd7/0x130
[ 4.601645] pci_device_probe+0xbf/0x1d0
[ 4.601651] really_probe+0x1f2/0x3d0
[ 4.601657] __driver_probe_device+0xfe/0x180
[ 4.601663] driver_probe_device+0x1e/0x90
[ 4.601668] __driver_attach+0xc0/0x1c0
[ 4.601673] ? __device_attach_driver+0xe0/0xe0
[ 4.601679] ? __device_attach_driver+0xe0/0xe0
[ 4.601684] bus_for_each_dev+0x86/0xd0
[ 4.601689] bus_add_driver+0x149/0x1e0
[ 4.601695] driver_register+0x8f/0xe0
[ 4.601700] i915_init+0x1d/0x7c [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 4.601880] ? 0xffffffffc0ddd000
[ 4.601883] do_one_initcall+0x54/0x220
[ 4.601892] do_init_module+0x4c/0x250
[ 4.601897] load_module+0x2652/0x2810
[ 4.601908] ? __do_sys_init_module+0x12e/0x1b0
[ 4.601912] __do_sys_init_module+0x12e/0x1b0
[ 4.601919] do_syscall_64+0x59/0x80
[ 4.601924] ? exc_page_fault+0x72/0x170
[ 4.601930] entry_SYSCALL_64_after_hwframe+0x44/0xae
[ 4.601934] RIP: 0033:0x7f298c60b6ae
[ 4.601939] Code: 48 8b 0d ed 66 0e 00 f7 d8 64 89 01 48 83 c8 ff c3 66 2e 0f 1f 84 00 00 00 00 00 90 f3 0f 1e fa 49 89 ca b8 af 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d ba 66 0e 00 f7 d8 64 89 01 48
[ 4.601942] RSP: 002b:00007ffdc63ddd88 EFLAGS: 00000246 ORIG_RAX: 00000000000000af
[ 4.601947] RAX: ffffffffffffffda RBX: 0000564d1a0913f0 RCX: 00007f298c60b6ae
[ 4.601949] RDX: 00007f298c76932c RSI: 00000000006d8327 RDI: 00007f298a1c5010
[ 4.601951] RBP: 00007f298a1c5010 R08: 00007f298abaa000 R09: 0000000000000000
[ 4.601952] R10: 00000000000038e1 R11: 0000000000000246 R12: 00007f298c76932c
[ 4.601954] R13: 0000564d1a0a53d0 R14: 0000564d1a0913f0 R15: 0000564d1a03a970
[ 4.601958] </TASK>
[ 4.601960] ---[ end trace 0000000000000000 ]---
[ 4.601965] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] Turning [ENCODER:235:DDI A/PHY A] VDD on
[ 4.602265] i915 0000:00:02.0: [drm:intel_pps_vdd_on_unlocked [i915]] PP_STATUS: 0x80000008 PP_CONTROL: 0x0000006b
[ 4.602752] i915 0000:00:02.0: [drm:intel_pps_off_unlocked [i915]] Turn [ENCODER:235:DDI A/PHY A] panel power off
[ 4.603016] i915 0000:00:02.0: [drm:intel_pps_off_unlocked [i915]] Wait for panel power off time
[ 4.603244] i915 0000:00:02.0: [drm:wait_panel_status [i915]] mask b0000000 value 00000000 status a0000002 control 00000060
[ 4.657790] i915 0000:00:02.0: [drm:intel_pps_off_unlocked [i915]] Wait complete
Suspicious suspend log
[ 24.669250] Call Trace:
[ 24.669251] <TASK>
[ 24.669252] i915_drm_suspend_late+0xdc/0xf0 [i915 b6f87c98ca244a808f5eeb6c3afa83de7cdef6d7]
[ 24.669276] ? pci_pm_poweroff_late+0x30/0x30
[ 24.669278] dpm_run_callback+0x47/0x150
[ 24.669280] __device_suspend_late+0xbb/0x240
[ 24.669282] async_suspend_late+0x1b/0x90
[ 24.669283] async_run_entry_fn+0x2d/0x130
[ 24.669284] process_one_work+0x1e2/0x3b0
[ 24.669285] worker_thread+0x50/0x3a0
[ 24.669286] ? rescuer_thread+0x3a0/0x3a0
[ 24.669287] kthread+0xd6/0x100
[ 24.669288] ? kthread_complete_and_exit+0x20/0x20
[ 24.669290] ret_from_fork+0x1f/0x30
[ 24.669292] </TASK>
[ 24.669292] ---[ end trace 0000000000000000 ]---
[ 24.674165] ACPI: EC: interrupt blocked
[ 24.768419] ACPI: PM: Preparing to enter system sleep state S3
[ 24.777516] ACPI: EC: event blocked
[ 24.777520] ACPI: EC: EC stopped
[ 24.777522] ACPI: PM: Saving platform NVS memory
[ 24.778158] Disabling non-boot CPUs ...
[ 24.786771] smpboot: CPU 1 is now offline
[ 24.788635] smpboot: CPU 2 is now offline
[ 24.794471] smpboot: CPU 3 is now offline
[ 24.795957] smpboot: CPU 4 is now offline
[ 24.800357] smpboot: CPU 5 is now offline
[ 24.802124] smpboot: CPU 6 is now offline
[ 24.806000] smpboot: CPU 7 is now offline
[ 24.807825] smpboot: CPU 8 is now offline
[ 24.811943] smpboot: CPU 9 is now offline
[ 24.813539] smpboot: CPU 10 is now offline
[ 24.816941] smpboot: CPU 11 is now offline
[18446744064.575421] [Firmware Bug]: TSC ADJUST differs: CPU0 0 --> -713939106. Restoring
[ 24.822816] ACPI: PM: Low-level resume complete
[ 24.822877] ACPI: EC: EC started
[ 24.822878] ACPI: PM: Restoring platform NVS memory
[ 24.824074] Enabling non-boot CPUs ...
[ 24.824123] x86: Booting SMP configuration:
[ 24.824123] smpboot: Booting Node 0 Processor 1 APIC 0x1
[ 24.826611] CPU1 is up
[ 24.826632] smpboot: Booting Node 0 Processor 2 APIC 0x8
[ 24.828928] CPU2 is up
[ 24.828953] smpboot: Booting Node 0 Processor 3 APIC 0x9
[ 24.831152] CPU3 is up
[ 24.831171] smpboot: Booting Node 0 Processor 4 APIC 0x10
[ 24.833931] CPU4 is up
[ 24.833980] smpboot: Booting Node 0 Processor 5 APIC 0x11
[ 24.836293] CPU5 is up
[ 24.836327] smpboot: Booting Node 0 Processor 6 APIC 0x18
[ 24.839922] CPU6 is up
[ 24.839976] smpboot: Booting Node 0 Processor 7 APIC 0x19
[ 24.843574] CPU7 is up
[ 24.843626] smpboot: Booting Node 0 Processor 8 APIC 0x20
[ 24.847305] CPU8 is up
[ 24.847352] smpboot: Booting Node 0 Processor 9 APIC 0x21
[ 24.850691] CPU9 is up
[ 24.850750] smpboot: Booting Node 0 Processor 10 APIC 0x28
[ 24.854586] CPU10 is up
[ 24.854638] smpboot: Booting Node 0 Processor 11 APIC 0x29
[ 24.857553] CPU11 is up
[ 24.862845] ACPI: PM: Waking up from system sleep state S3
Spec:
inxi -Fxz -G --display
System: Host: chins Kernel: 5.17.0-1-drm-tip-git-g21ad4b8824d1 x86_64 bits: 64
compiler: N/A Desktop: N/A Distro: Arch Linux
Machine: Type: Laptop System: LENOVO product: 82RC v: Legion Y7000P IAH7
serial: <filter>
Mobo: LENOVO model: LNVNB161216 v: SDK0T76479 WIN serial: <filter>
UEFI: LENOVO v: J2CN37WW date: 02/28/2022
Battery: ID-1: BAT0 charge: 80.4 Wh condition: 82.1/80.0 Wh (103%) model: BYD L21B4PC0
status: Full
Device-1: hidpp_battery_0 model: Logitech G603 Wireless Gaming Mouse
charge: 100% (should be ignored) status: Discharging
CPU: Topology: 6-Core model: 12th Gen Intel Core i7-12700H bits: 64 type: MT MCP
arch: N/A L2 cache: 24.0 MiB
flags: lm nx pae sse sse2 sse3 sse4_1 sse4_2 ssse3 vmx bogomips: 64536
Speed: 513 MHz min/max: 400/5900 MHz Core speeds (MHz): 1: 537 2: 605 3: 475
4: 569 5: 516 6: 582 7: 714 8: 790 9: 458 10: 687 11: 509 12: 560
Graphics: Card-1: Intel Alder Lake-P Integrated Graphics driver: i915 v: kernel
bus ID: 00:02.0
Card-2: NVIDIA GA107BM [GeForce RTX 3050 Ti Mobile] driver: N/A
bus ID: 01:00.0
Display: wayland server: N/A driver: none unloaded: modesetting tty: 92x45
Message: No advanced graphics data found on this system.
Audio: Card-1: Intel Alder Lake PCH-P High Definition Audio driver: snd_hda_intel
v: kernel bus ID: 00:1f.3
Card-2: NVIDIA driver: snd_hda_intel v: kernel bus ID: 01:00.1
Sound Server: ALSA v: k5.17.0-1-drm-tip-git-g21ad4b8824d1
Network: Card-1: Intel Alder Lake-P PCH CNVi WiFi driver: iwlwifi v: kernel
bus ID: 00:14.3
IF: wlan0 state: up mac: <filter>
Card-2: Realtek RTL8111/8168/8411 PCI Express Gigabit Ethernet driver: r8169
v: kernel port: 3000 bus ID: 31:00
IF: enp49s0 state: down mac: <filter>
IF-ID-1: virbr0 state: down mac: <filter>
Drives: Local Storage: total: 465.76 GiB used: 42.57 GiB (9.1%)
ID-1: /dev/nvme0n1 vendor: Western Digital model: WDS500G3X0C-00SJG0
size: 465.76 GiB
ID-2: /dev/nvme1n1 vendor: Samsung model: MZVL2512HCJQ-00BL2 size: 476.94 GiB
Partition: ID-1: / size: 200.00 GiB used: 14.17 GiB (7.1%) fs: btrfs dev: /dev/nvme0n1p2
ID-2: /boot size: 1022.0 MiB used: 195.7 MiB (19.1%) fs: vfat
dev: /dev/nvme0n1p1
ID-3: /home size: 264.76 GiB used: 28.21 GiB (10.7%) fs: btrfs
dev: /dev/nvme0n1p3
Sensors: System Temperatures: cpu: 34.0 C mobo: N/A
Fan Speeds (RPM): N/A
Info: Processes: 293 Uptime: 25m Memory: 15.22 GiB used: 1.56 GiB (10.3%)
Init: systemd Compilers: gcc: 11.2.0 clang: 13.0.1 Shell: zsh v: 5.8.1
inxi: 3.0.18
Detailed dmesg Log
best regards.